--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <section id="courses" class="section courses-section">
                 <div class="section-header">
                     <h2>Course Management</h2>
-                    <p>Organize and track assignments across all your courses</p>
+                    <p>Organize and track assignments in one place</p>
                 </div>
                 <div class="feature-grid">
                     <div class="feature-card">
@@ -161,7 +161,7 @@
                             <i class="fas fa-book"></i>
                         </div>
                         <h3>Multiple Syllabi</h3>
-                        <p>Upload and manage syllabi from multiple courses in one place</p>
+                        <p>Upload and manage syllabi from multiple courses</p>
                     </div>
                     <div class="feature-card">
                         <div class="feature-icon">
