--- a/index.html
+++ b/index.html
@@ -76,8 +76,9 @@
                                 <i class="fas fa-cloud-upload-alt"></i>
                             </div>
                             <h3>Upload Course Syllabus</h3>
-                            <p>Drag and drop your syllabus here, or click to browse</p>
-                            <input type="file" id="fileInput" accept=".pdf,.doc,.docx,.txt" hidden>
+                            <p>Drag and drop your syllabus here, or click to browse<br>
+                            <small>Supports PDF, PNG, JPG, DOCX, and HTML files</small></p>
+                            <input type="file" id="fileInput" accept=".pdf,.png,.jpg,.jpeg,.docx,.html" hidden>
                             <button class="upload-btn" onclick="document.getElementById('fileInput').click()">
                                 Choose File
                             </button>
@@ -191,28 +192,7 @@
                 </div>
                 <div class="about-content">
                     <div class="about-text">
-                        <h3>Our Mission</h3>
-                        <p>We understand how overwhelming university can be with multiple courses, assignments, and deadlines. UW Due Date was created to help University of Waterloo students take control of their academic schedule by automatically extracting and organizing important dates from course syllabi.</p>
-                        
-                        <h3>How It Works</h3>
-                        <p>Simply upload your course syllabus and our AI-powered system will analyze the document to identify assignments, exams, and their due dates. We'll highlight the most urgent tasks and help you prioritize your work effectively.</p>
-                        
-                        <h3>Built for Students</h3>
-                        <p>This tool was designed specifically with University of Waterloo students in mind, understanding the unique challenges of managing course loads and deadlines in a fast-paced academic environment.</p>
-                    </div>
-                    <div class="stats-grid">
-                        <div class="stat-card">
-                            <div class="stat-number">AI</div>
-                            <div class="stat-label">Powered Analysis</div>
-                        </div>
-                        <div class="stat-card">
-                            <div class="stat-number">7</div>
-                            <div class="stat-label">Day Urgency Window</div>
-                        </div>
-                        <div class="stat-card">
-                            <div class="stat-number">∞</div>
-                            <div class="stat-label">Syllabi Supported</div>
-                        </div>
+                        <p>We understand how overwhelming university can be with multiple courses, assignments, and deadlines. UW Due Date was created to help University of Waterloo students take control of their academic schedule by automatically extracting and organizing important dates from course syllabi. Simply upload your course syllabus and our AI-powered system will analyze the document to identify assignments, exams, and their due dates. We'll highlight the most urgent tasks and help you prioritize your work effectively. This tool was designed specifically with University of Waterloo students in mind, understanding the unique challenges of managing course loads and deadlines in a fast-paced academic environment.</p>
                     </div>
                 </div>
             </section>
