fix directory issues

--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Comic+Neue:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="icon" type="image/png" href="public/images/2DoLogo.png">
-    <link rel="shortcut icon" type="image/png" href="public/images/2DoLogo.png">
+    <link rel="icon" type="image/png" href="/images/2DoLogo.png">
+    <link rel="shortcut icon" type="image/png" href="/images/2DoLogo.png">
 </head>
 <body>
     <div class="container">
         <nav class="navbar">
             <div class="nav-content">
                 <div class="nav-brand">
-                    <img src="public/images/2DoLogo.png" alt="UW 2DO Logo" class="brand-logo">
+                    <img src="/images/2DoLogo.png" alt="UW 2DO Logo" class="brand-logo">
                     <span class="brand-text">UW 2DO</span>
                 </div>
                 <div class="nav-links">
@@ -179,7 +179,7 @@
         <div class="chatbot-container">
                 <div class="chatbot-header">
                     <h3>
-                        <img src="public/images/2DoLogo.png" alt="UW 2DO Logo" class="chatbot-logo">
+                        <img src="/images/2DoLogo.png" alt="UW 2DO Logo" class="chatbot-logo">
                         UW 2DO Assistant
                     </h3>
                 <button id="closeChatBtn" class="close-btn">
@@ -189,7 +189,7 @@
             <div class="chatbot-messages" id="chatMessages">
                 <div class="message bot-message">
                     <div class="message-avatar">
-                        <img src="public/images/2DoLogo.png" alt="UW 2DO Logo" class="avatar-logo">
+                        <img src="/images/2DoLogo.png" alt="UW 2DO Logo" class="avatar-logo">
                     </div>
                     <div class="message-content">
                         <p>Hi! I'm your UW 2DO assistant. Ask me about deadlines, assignments, or upcoming tasks for your courses. Try asking:</p>
