--- a/index.html
+++ b/index.html
@@ -166,10 +166,9 @@
 
         <footer class="footer">
             <p>&copy; 2025 UW 2DO. Built by 
-                <a href="https://www.linkedin.com/in/zacharyyu/" target="_blank" class="author-link">Zachary Yu</a>, 
-                <a href="https://www.linkedin.com/in/aaron-wang-5b0a6a298/" target="_blank" class="author-link">Aaron Wang</a>, and 
+                <a href="https://www.linkedin.com/in/zacharyyu/" target="_blank" class="author-link">Zachary Yu</a> with contributions from
+                <a href="https://www.linkedin.com/in/aaron-wang-5b0a6a298/" target="_blank" class="author-link">Aaron Wang</a> and 
                 <a href="https://www.linkedin.com/in/calvinlee33/" target="_blank" class="author-link">Calvin Lee</a> 
-                for University of Waterloo students ❤️
             </p>
         </footer>
     </div>
